Fixing correct link for github pages

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "social-links-profile-main",
-  "homepage": "https://dilaraj.io/social-links-component",
+  "homepage": "https://dilaraj.github.io/social-links-component/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
